# MS-OVBA-Crypto

./: README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: python-package.yml  python-publish.yml
src/: ms_ovba.py  ms_ovba_crypto.py
src/ms_ovba_crypto/: __init__.py  ms_ovba_crypto.py
tests/: test_decryption.py  test_encryption.py
