[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ms_ovba_crypto"
version = "0.1.0"
authors = [
  { name="Kevin Nowaczyk", email="beakerboy99@yahoo.com" },
]
description = "Encryption and hashing functions for Office VBA files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.optional-dependencies]
tests = [
  'coveralls',
  'flake8-annotations',
  'mypy',
  'pytest',
  'pytest-cov',
  'pep8-naming'
]
[project.urls]
"Homepage" = "https://github.com/Beakerboy/MS-OVBA-Crypto"
"Bug Tracker" = "https://github.com/Beakerboy/MS-OVBA-Crypto/issues"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
